Fixed spacing on form dialog buttons
Adds some spacing between buttons for
dialog form modals.

fixes CNVS-16859

test plan:
* Enable "Better File Browsing" feature flag
* Go to any course's Files page
* Select a file or folder and click on
  "Restrict Access" button in the toolbar
  on top
* There should be spacing between the submit
  and cancel buttons
* Repeat for the "Move" dialog

Reviewed-on: https://gerrit.instructure.com/44570
Tested-by: Jenkins <jenkins@instructure.com>
QA-Review: Anna Koalenz <akoalenz@instructure.com>
Product-Review: Dan Minkevitch <dan@instructure.com>

--- a/app/stylesheets/pages/react_files/_react_files.scss
+++ b/app/stylesheets/pages/react_files/_react_files.scss
@@ -263,3 +263,9 @@ $ef-thumbnail-size: 36px;
 // Hack, Hack, Hack!
 // to make sure that there is space for the ItemCog menu to appear below the bottom thing in the list of files
 #footer { min-height: 80px }
+
+.form-controls {
+  .btn {
+    margin: 0 0 0 5px;
+  }
+}
